cmake_minimum_required(VERSION 2.8)
project(ihm)
SET(PROJECT_NAME ihm)


#For Boost usage
set(Boost_USE_STATIC_LIBS   ON)
set(Boost_USE_MULTITHREADED ON)
set(Boost_ADDITIONAL_VERSIONS "1.44" "1.44.0")

find_package(Boost COMPONENTS thread date_time program_options filesystem system REQUIRED)

INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS})
ADD_DEFINITIONS( "-DHAS_BOOST" )
LINK_DIRECTORIES(${Boost_LIBRARY_DIRS})


# For Qt4 usage 
FIND_PACKAGE(Qt4 REQUIRED)
INCLUDE(${QT_USE_FILE})
INCLUDE_DIRECTORIES(${QT_INCLUDE_DIR})
LINK_DIRECTORIES (${QT_LIBRARIES})
ADD_DEFINITIONS(${QT_DEFINITIONS})

# For NIDAQ
IF(WIN32)
INCLUDE_DIRECTORIES("C:\\Program Files (x86)\\National Instruments\\NI-DAQ\\DAQmx ANSI C Dev\\include")
LINK_DIRECTORIES("C:\\Program Files (x86)\\National Instruments\\NI-DAQ\\DAQmx ANSI C Dev\\lib\\msvc")
ENDIF (WIN32)

# TO UPDATE BY Romain
#INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/../qextserialport/src)
#LINK_DIRECTORIES(${CMAKE_SOURCE_DIR}/../qextserialport/src)
#INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/../Plotter/include)
#LINK_DIRECTORIES(${CMAKE_SOURCE_DIR}/../Plotter/include)

# Project Include
INCLUDE_DIRECTORIES(
${CMAKE_SOURCE_DIR}/include
#${CMAKE_SOURCE_DIR}/Plotter/include
)

SET(PROJECT_SOURCES
# Project sources
${CMAKE_SOURCE_DIR}/src/main.cpp
${CMAKE_SOURCE_DIR}/src/MainWindow.cpp
${CMAKE_SOURCE_DIR}/src/Calculator.cpp
${CMAKE_SOURCE_DIR}/src/Acquisitor.cpp
${CMAKE_SOURCE_DIR}/src/Plotter.cpp
${CMAKE_SOURCE_DIR}/src/Tools.cpp

# Project headers
${CMAKE_SOURCE_DIR}/include/MainWindow.h
${CMAKE_SOURCE_DIR}/include/Calculator.h
${CMAKE_SOURCE_DIR}/include/Acquisitor.h
${CMAKE_SOURCE_DIR}/include/Plotter.h
${CMAKE_SOURCE_DIR}/include/Tools.h
)

# MOCing process 
SET(PROJECT_MOC_CLASSES
${CMAKE_SOURCE_DIR}/include/MainWindow.h
${CMAKE_SOURCE_DIR}/include/Acquisitor.h
${CMAKE_SOURCE_DIR}/include/Plotter.h
)
 
QT4_WRAP_CPP(PROJECT_MOC_SOURCES  ${PROJECT_MOC_CLASSES})
SOURCE_GROUP(moc FILES ${PROJECT_MOC_SOURCES})

# Compilation and installation
IF(WIN32)
ADD_EXECUTABLE(${PROJECT_NAME} ${PROJECT_SOURCES} ${PROJECT_MOC_SOURCES})
TARGET_LINK_LIBRARIES(${PROJECT_NAME} 
${QT_LIBRARIES} NIDAQmx
)
ENDIF (WIN32)
 
IF (UNIX)
ADD_EXECUTABLE(${PROJECT_NAME} ${PROJECT_SOURCES} ${PROJECT_MOC_SOURCES})
TARGET_LINK_LIBRARIES(
${PROJECT_NAME} 
${QT_LIBRARIES}
${Boost_LIBRARIES}
)
ENDIF (UNIX)

INSTALL(TARGETS ${PROJECT_NAME} RUNTIME DESTINATION ${CMAKE_SOURCE_DIR}/bin )