PROJECT(qextserialport)

CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

FIND_PACKAGE(Qt4 REQUIRED)
INCLUDE(${QT_USE_FILE})

SET(QEXTSERIALPORT_SOURCES
	qextserialport.cpp
	qextserialenumerator.cpp
	)

SET(QEXTSERIALPORT_MOC_HEADERS
	qextserialport.h
	qextserialenumerator.h
	)

IF (WIN32)
	SET(QEXTSERIALPORT_SOURCES
		${QEXTSERIALPORT_SOURCES}
		win_qextserialport.cpp
	)
	ADD_DEFINITIONS(-DWINVER=0x0501)
	SET(QT_USE_QTGUI true)
	SET(QEXTSERIALPORT_LIBRARIES
		setupapi
		)
ELSE(UNIX)
	SET(QEXTSERIALPORT_SOURCES
		${QEXTSERIALPORT_SOURCES}
		qextserialport.cpp
	)
	SET(QT_USE_QTGUI false)
ENDIF(WIN32)

QT4_WRAP_CPP(QEXTSERIALPORT_MOC ${QEXTSERIALPORT_MOC_HEADERS})

ADD_LIBRARY(qextserialport SHARED ${QEXTSERIALPORT_SOURCES} ${QEXTSERIALPORT_MOC})
TARGET_LINK_LIBRARIES(qextserialport ${QT_LIBRARIES} ${QEXTSERIALPORT_LIBRARIES})

INSTALL(TARGETS qextserialport
		RUNTIME DESTINATION bin
		ARCHIVE DESTINATION lib
		LIBRARY DESTINATION lib
	)

INSTALL(FILES ${QEXTSERIALPORT_MOC_HEADERS} DESTINATION include/qextserialport)
